<resources>
    <string name="app_name">taobaoUnion</string>
    <string name="todo">TODO</string>
    <string name="goodstitle">这个是商品的主题，感觉这个地方的自述会比较多，所以随便打了很多</string>
    <string name="tianmao">天猫</string>
    <string name="textview">TextView</string>
    <string name="quan">券</string>
    <string name="quanhou">券后：</string>
    <string name="yishou">已售:2.12万</string>
    <string name="jiage">￥10.00</string>
    <string name="text_goods_off_price">省%1$d元</string>
    <string name="text_original_price">￥%1$s</string>
    <string name="text_goods_volume">已售:%1$d</string>
</resources>
