<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/goods_cover"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/goods_title_info"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_34"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="8dp"
            android:text="@string/goodstitle"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_tmall"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_17"
                android:background="@drawable/shape_tag_bg"
                android:gravity="center"
                android:text="@string/tianmao"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_quan"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_17"
                android:layout_marginStart="@dimen/dp_14"
                android:background="@drawable/shape_tag_bg"
                android:gravity="center"
                android:text="@string/quan"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/goods_off_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:text="@string/textview"
                android:textColor="@color/color_taobao"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quanhou"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/result_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/jiage"
                android:textColor="@color/color_taobao"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/goods_original_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/goods_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_106"
                android:text="@string/yishou"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>